[metadata]
name = designer_family
description-file =
    README.rst
author = test
classifier =
    Environment :: web
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    designer_family
    designer_family_db_tools

[entry_points]
oslo.config.opts =
    designer_family.conf = designer_family.conf.opts:list_opts

oslo.policy.enforcer =
    designer_family = designer_family.policy:get_enforcer

oslo.policy.policies =
    # The sample policies will be ordered by entry point and then by list
    # returned from that entry point. If more control is desired split out each
    # list_rules method into a separate entry point rather than using the
    # aggregate method.
    designer_family = designer_family.policies:list_rules

console_scripts =
    designer_family-manage = designer_family.cmd.manage:main
    designer_family-status = designer_family.cmd.status:main
wsgi_scripts =
    designer_family-api = designer_family.wsgi:init_application
    test-api = designer_family.api.app:build_wsgi_app

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
